1 September 2004 Sylvain Pion
- number_utils.h : remove #include <CGAL/kernel_basic.h>.

21 August 2004 Sylvain Pion
- Undo last change

20 August 2004 Menelaos Karavelas
- first attempt towards the new number type traits

13 August 2004 Sylvain Pion
- Use MPFR to properly fix to_interval(GMP types).

11 August 2004 Andreas Fabri
- bug fix in operator>>(istream, Gmpz)

9 August 2004 Sylvain Pion
- Use std::ios instead of std::ios_base to please g++ 2.95.

4 August 2004 Sylvain Pion
- operator>>(Gmpz) : better failure handling.

24 June 2004 Sylvain Pion
- Protect some leda number type functions against CGAL_USE_ADL_FOR_NT.

24 June 2004 Sylvain Pion
- Use CGAL_NTS instead of CGAL:: in Quotient::to_double.

20 June 2004 Sylvain Pion
- Minor optimisation : to_double(double) returns a const reference.

20 June 2004 Sylvain Pion
- GMPXX : No need to forward abs() and sqrt() when CGAL_USE_ADL_FOR_NT.

20 June 2004 Sylvain Pion
- Use CGAL_USE_ADL_FOR_NT instead of hardcoding a test for g++ 3.4
  in previous change.

20 June 2004 Sylvain Pion
- Define CGAL_NTS as empty for g++ 3.4 as a temporary attempt.
  This enables Koenig Lookup, and allows experimenting with it.

20 June 2004 Sylvain Pion
- Use CGAL_NTS instead of CGAL:: for to_double/to_interval.

31 May 2004 Sylvain Pion
- Add simplify_quotient() function in Quotient operations, and make it
  simplify the exponents for MP_Float (other number types do not do anything).

31 May 2004 Sylvain Pion
- Change the exponent of MP_Float to be a double instead of int.
  (temporary improvement before using a multiprecision value)

31 May 2004 Sylvain Pion
- Document the limitation of the exponent of MP_Float.

30 Apr 2004 Sylvain Pion
- Fix to_interval() for all GMP types when there is overflow.
  A really proper fix probably requires some work within GMP.

27 Apr 2004 Sylvain Pion
- Replace explicit compilers tests by CGAL_CFG_IEEE_754_BUG.

17 Apr 2004 Sylvain Pion