@@ -44,6 +44,10 @@ struct Number_type_traits<CORE::Expr> {
   typedef Tag_false Has_gcd;
   typedef Tag_true  Has_division;
   typedef Tag_true  Has_sqrt;
+
+  typedef Tag_true  Has_exact_ring_operations;
+  typedef Tag_true  Has_exact_division;
+  typedef Tag_true  Has_exact_sqrt;
 };
 
 inline
