@@ -160,9 +160,12 @@ class Gmpq
   typedef Handle_for<Gmpq_rep> Base;
 public:
   typedef Tag_false  Has_gcd;
-  typedef Tag_true Has_division;
+  typedef Tag_true   Has_division;
   typedef Tag_false  Has_sqrt;
 
+  typedef Tag_true   Has_exact_ring_operations;
+  typedef Tag_true   Has_exact_division;
+  typedef Tag_false  Has_exact_sqrt;
 
   Gmpq() // {} we can't do that since the non-const mpq() is called.
     : Base(Gmpq_rep()) {}
