@@ -72,7 +72,11 @@ class MP_Float
 public:
   typedef Tag_false  Has_gcd;
   typedef Tag_true   Has_division;
-  typedef Tag_false  Has_sqrt;
+  typedef Tag_true   Has_sqrt;
+
+  typedef Tag_true   Has_exact_ring_operations;
+  typedef Tag_false  Has_exact_division;
+  typedef Tag_false  Has_exact_sqrt;
 
   typedef short limb;
   typedef int   limb2;
