@@ -40,6 +40,10 @@ template<> struct Number_type_traits<double> {
   typedef Tag_false  Has_gcd;
   typedef Tag_true   Has_division;
   typedef Tag_true   Has_sqrt;
+
+  typedef Tag_false  Has_exact_ring_operations;
+  typedef Tag_false  Has_exact_division;
+  typedef Tag_false  Has_exact_sqrt;
 };
 
 inline
