@@ -50,8 +50,12 @@ CGAL_BEGIN_NAMESPACE
 template <>
 struct Number_type_traits<mpz_class> {
   typedef Tag_false Has_gcd;
-  typedef Tag_false Has_division;
+  typedef Tag_true  Has_division;
   typedef Tag_true  Has_sqrt;
+
+  typedef Tag_true  Has_exact_ring_operations;
+  typedef Tag_false Has_exact_division;
+  typedef Tag_false Has_exact_sqrt;
 };
 
 template <>
@@ -59,6 +63,10 @@ struct Number_type_traits<mpq_class> {
   typedef Tag_false Has_gcd;
   typedef Tag_true  Has_division;
   typedef Tag_false Has_sqrt;
+
+  typedef Tag_true  Has_exact_ring_operations;
+  typedef Tag_true  Has_exact_division;
+  typedef Tag_false Has_exact_sqrt;
 };
 
 template <>
