@@ -37,8 +37,12 @@ CGAL_BEGIN_NAMESPACE
 
 template <> struct Number_type_traits<leda_integer> {
   typedef Tag_true  Has_gcd;
-  typedef Tag_false Has_division;
-  typedef Tag_false Has_sqrt;
+  typedef Tag_true  Has_division;
+  typedef Tag_true  Has_sqrt;
+
+  typedef Tag_true  Has_exact_ring_operations;
+  typedef Tag_false Has_exact_division;
+  typedef Tag_false Has_exact_sqrt;
 };
 
 #ifndef CGAL_CFG_NO_NAMESPACE
